<resources>
    <string name="app_name">EZCart</string>

    <!--Login Fragment-->
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="password">Password</string>
    <string name="user_id">User ID</string>
    <string name="login_logo_content_description">EZ Cart logo</string>
    <string name="password_validation_text_1">Password should contain minimum of 8 characters</string>
    <string name="password_validation_text_2">Password should contain one digit</string>
    <string name="password_validation_text_3">Should contain one lower letter</string>
    <string name="password_validation_text_4">Should contain one upper letter</string>
    <string name="password_validation_text_5">Should contain one special character expected</string>
    <string name="valid_email">✔ Valid email address</string>
    <string name="valid_password">✔ Valid Password</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="login_dialog_text">Signing in</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="user_not_found">User not found</string>

    <!--Registration Fragment-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile No</string>
    <string name="register">Register</string>
    <string name="blank_input">Field cannot be blank</string>
    <string name="invalid_mobile">Invalid Phone number</string>
    <string name="valid_mobile">✔ Valid Phone number</string>
    <string name="register_dialog_text">Registering user</string>

    <!--Navigation drawer-->
    <string name="profile_placeholder_text">John Doe</string>
    <string name="menu_home">Home</string>
    <string name="menu_view_cart">View Cart</string>
    <string name="menu_orders">Your Orders</string>
    <string name="menu_feedback">Rate us</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Logout</string>
    <string name="nav_drawer_profile_content_description">Profile image</string>

    <!--Feedback Fragment-->
    <string name="rate_now">Rate Now</string>
    <string name="feedback_text">Feedback</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="product_image">Product image</string>
    <string name="feedback_text_limit_exceeded">Characters exceed maximum limit of 400</string>
    <string name="feedback_success">Thanks for your feedback</string>
    <string name="feedback_update">Kindly provide the rating between 1 to 5</string>

    <!--Home Fragment-->
    <string name="dash">-</string>
    <string name="dollar">$</string>
    <string name="banner_content_desc">Banner</string>

    <!--Details Fragment-->
    <string name="expires_on_text">Expires on :</string>
    <string name="available_quantity_text">Available quantity :</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="item_content_desc">Item image</string>
    <string name="orders_placeholder_pretext">Orders for </string>

    <!--Cart Fragment-->
    <string name="view_cart_header_text">Hey! No delivery charges on this order</string>
    <string name="remove_item_from_cart">Remove item from cart</string>
    <string name="place_order">Place Order</string>
    <string name="order_placement_successful">Order placed successfully</string>

    <!--Main Activity-->
    <string name="log_out_message">Do you want to logout from application?</string>
    <string name="logout_yes">yes</string>
    <string name="logout_no">No</string>
    <string name="log_out_title">Exit</string>
    <string name="log_out_success">Logout successful</string>
    <string name="set_profile_image_title">Set Profile picture</string>
    <string name="source_camera">Camera</string>
    <string name="source_gallary">Gallary</string>
    <string name="intent_failure_message">Something went wrong, Please try again</string>
    <string name="notification_item">notification item</string>
    <string name="order_placement_failed">No items in the cart</string>

</resources>