<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_view_cart"
            android:title="@string/menu_view_cart" />

        <item
            android:id="@+id/nav_orders"
            android:title="@string/menu_orders" />

        <item
            android:id="@+id/nav_feedback"
            android:title="@string/menu_feedback" />

        <item
            android:id="@+id/nav_help"
            android:title="@string/menu_help" />

        <item
            android:id="@+id/nav_logout"
            android:title="@string/menu_logout" />
    </group>

</menu>