<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="item"
            type="com.prashant.naik.ezcart.model.Item" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        tools:context=".ui.details.DetailsFragment">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="@dimen/banner_height"
            android:src="@drawable/bread_banner"
            android:contentDescription="@string/item_content_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteY="61dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_sm"
            app:cardElevation="@dimen/card_elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_general">

                <TextView
                    android:id="@+id/item_details_dollar_placeholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dollar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/dollar" />

                <TextView
                    android:id="@+id/item_details_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{Integer.toString(item.price)}"
                    app:layout_constraintBottom_toBottomOf="@id/item_details_dollar_placeholder"
                    app:layout_constraintStart_toEndOf="@+id/item_details_dollar_placeholder"
                    app:layout_constraintTop_toTopOf="@+id/item_details_dollar_placeholder"
                    tools:text="100" />

                <TextView
                    android:id="@+id/item_details_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{item.desc}"
                    app:layout_constraintStart_toStartOf="@+id/item_details_dollar_placeholder"
                    app:layout_constraintTop_toBottomOf="@+id/item_details_dollar_placeholder"
                    tools:text="Description" />

                <TextView
                    android:id="@+id/item_details_expires_placeholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expires_on_text"
                    app:layout_constraintStart_toStartOf="@+id/item_details_description"
                    app:layout_constraintTop_toBottomOf="@+id/item_details_description" />

                <TextView
                    android:id="@+id/item_details_expiry_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{item.expiryDate}"
                    app:layout_constraintBottom_toBottomOf="@+id/item_details_expires_placeholder"
                    app:layout_constraintStart_toEndOf="@+id/item_details_expires_placeholder"
                    tools:text="20/02/21" />

                <TextView
                    android:id="@+id/item_details_quantity_placeholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/available_quantity_text"
                    app:layout_constraintStart_toStartOf="@+id/item_details_expires_placeholder"
                    app:layout_constraintTop_toBottomOf="@+id/item_details_expires_placeholder" />

                <TextView
                    android:id="@+id/item_details_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{item.quantity}"
                    app:layout_constraintBottom_toBottomOf="@+id/item_details_quantity_placeholder"
                    app:layout_constraintStart_toEndOf="@+id/item_details_quantity_placeholder"
                    tools:text="8" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/add_to_cart_button"
            style="@style/EZButton"
            android:text="@string/add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/margin_general"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>