<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="item"
            type="com.prashant.naik.ezcart.data.Item" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_sm"
            app:cardElevation="@dimen/card_elevation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/product_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/product_image"
                    android:scaleType="center"
                    android:src="@drawable/product_01"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/cart_item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_general"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@{item.itemName}"
                    app:layout_constraintStart_toEndOf="@+id/product_image"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Order date" />

                <TextView
                    android:id="@+id/cart_item_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_general"
                    android:text="@{Integer.toString(item.price)}"
                    app:layout_constraintStart_toEndOf="@+id/cart_item_currency"
                    app:layout_constraintTop_toBottomOf="@+id/cart_item_name"
                    tools:text="Price" />

                <TextView
                    android:id="@+id/cart_item_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_general"
                    android:text="@string/dollar"
                    app:layout_constraintStart_toStartOf="@+id/cart_item_name"
                    app:layout_constraintTop_toBottomOf="@+id/cart_item_name"
                    tools:text="$" />

                <ImageView
                    android:id="@+id/cart_item_remove_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_icon_close"
                    android:contentDescription="@string/remove_item_from_cart"
                    android:layout_margin="@dimen/margin_general"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>